--- a/index.html
+++ b/index.html
@@ -5,10 +5,50 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Artists Works</title>
 </head>
 
 <body>
+    <header>
+        <h3>Artist at Met</h3>
+    </header>
+
+    <!-- Artist Menu -->
+    <div id="artist-menu">
+        <!-- Artist Images Here -->
+    </div>
+
+    <!-- Artist Details -->
+    <div id="artist-detail">
+        <img id="detail-image" src="" alt="Insert Name Here" />
+        <h2 id="detail-name"">Insert Name Here</h2>
+    <h3 id=" detail-restaurant">Insert Artist Here</h3>
+    </div>
+
+    <h3>Rating:</h3>
+    <p>
+        <span id='detail-rating'>Insert rating here</span> / 10
+    </p>
+    <h3>Comment:</h3>
+    <p id='detail-comment'>
+        Insert comment here
+    </p>
+
+    <!-- New Artist Form -->
+    <form id="new-artist">
+        <h4>Add New Artist</h4>
+        <label for="name">Name: </label>
+        <input type="text" name="name" id="new-name" />
+        <label for="restaurant">Restaurant: </label>
+        <input type="text" name="restaurant" id="new-restaurant" />
+        <label for="image">Image: </label>
+        <input type="text" name="image" id="new-image" />
+        <label for="rating">Rating: </label>
+        <input type="number" name="rating" id="new-rating" />
+        <label for="new-comment">Comment: </label>
+        <textarea name="new-comment" id="new-comment"></textarea>
+        <input type="submit" value="Create" />
+    </form>
 
 </body>
 
