--- a/index.html
+++ b/index.html
@@ -22,37 +22,43 @@
     <div id="artist-menu">
         <!-- Artist Images Here -->
     </div>
+    <!-- // resto = title
+    //rating =date
+    //comment = likes -->
 
     <!-- Artist Details -->
     <div id="artist-detail">
-        <img id="detail-image" src="" alt="Insert Name Here" />
+        <img id="detail-image" src="" alt="Insert Image Here" />
         <h2 id="detail-name"">Insert Name Here</h2>
-    <h3 id=" detail-restaurant">Insert Artist Here</h3>
+    <h3 id=" detail-title">Insert Ttile Here</h3>
     </div>
 
-    <h3>Rating:</h3>
+    <h3>Date:</h3>
     <p>
-        <span id='detail-rating'>Insert rating here</span> / 10
+        <span id='detail-date'>Insert rating here</span> / 10
     </p>
     <h3>Comment:</h3>
-    <p id='detail-comment'>
-        Insert comment here
+    <p id='detail-likes'>
+        Insert likes here
     </p>
-
+    <!-- // resto = title
+    //rating =date
+    //comment = likes
+     -->
     <!-- New Artist Form -->
     <form id="new-artist">
         <h4>Add New Artist</h4>
         <label for="name">Name: </label>
         <input type="text" name="name" id="new-name" />
-        <label for="restaurant">Restaurant: </label>
-        <input type="text" name="restaurant" id="new-restaurant" />
+        <label for="title">Title: </label>
+        <input type="text" name="title" id="new-title" />
         <label for="image">Image: </label>
         <input type="text" name="image" id="new-image" />
-        <label for="rating">Rating: </label>
-        <input type="number" name="rating" id="new-rating" />
-        <label for="new-comment">Comment: </label>
-        <textarea name="new-comment" id="new-comment"></textarea>
-        <input type="submit" value="Create" />
+        <label for="date">Date: </label>
+        <input type="number" name="date" id="new-date" />
+        <label for="new-likes">Likes: </label>
+        <textarea name="new-likes" id="new-likes"></textarea>
+        <input type="submit" value="Paint" />
     </form>
 
 </body>
