--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <p>
         <span id='detail-date'>Insert rating here</span> / 10
     </p>
-    <h3>Comment:</h3>
+    <h3>Likes:</h3>
     <p id='detail-likes'>
         Insert likes here
     </p>
