--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div id="artist-detail">
         <img id="detail-image" src="" alt="Insert Image Here" />
         <h2 id="detail-name"">Insert Name Here</h2>
-    <h3 id=" detail-title">Insert Ttile Here</h3>
+    <h3 id=" detail-title">Insert Title Here</h3>
     </div>
 
     <h3>Date:</h3>
