--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="index.js" defer></script>
     <link rel="stylesheet" href="style.css">
 
-    <title>Artists Works</title>
+    <title>Artists At the Met</title>
 </head>
 
 <body>
