last minute changes

--- a/index.html
+++ b/index.html
@@ -27,22 +27,22 @@
     <!-- Artist Details -->
     <div id="artist-detail">
         <img id="detail-image" src="" alt="Insert Image Here" />
-        <h2 id="detail-name"">Insert Name Here</h2>
-    <h3 id=" detail-title">Insert Title Here</h3>
+        <h2 id="detail-name"">Artist</h2>
+    <h3 id=" detail-title">Artist</h3>
     </div>
 
-    <h3>Date:</h3>
-    <p>
-        <span id='detail-date'>Insert rating here</span> / 10
-    </p>
-    <h3>Likes:</h3>
+    <!-- <h3>Date:</h3> -->
+    <!-- <p>
+        <span id='detail-date'>Inser</span> 
+    </p> -->
+    <!-- <h3>Likes:</h3>
     <p id='detail-likes'>
-        Insert likes here
-    </p>
+
+    </p> -->
 
     <!-- New Artist Form -->
     <form id="new-artist">
-        <h4>Add New Artist</h4>
+        <!-- <h4>New Artist</h4>
         <label for="name">Name: </label>
         <input type="text" name="name" id="new-name" />
         <label for="title">Title: </label>
@@ -52,7 +52,7 @@
         <label for="date">Date: </label>
         <input type="number" name="date" id="new-date" />
         <label for="new-likes">Likes: </label>
-        <textarea name="new-likes" id="new-likes"></textarea>
+        <textarea name="new-likes" id="new-likes"></textarea> -->
         <input type="submit" value="Paint" />
     </form>
 
