--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <header>
-        <h3>Artist at Met</h3>
+        <h3>Artist at The Met</h3>
     </header>
 
     <!-- Artist Menu -->
@@ -42,6 +42,10 @@
 
     <!-- New Artist Form -->
     <form id="new-artist">
+
+        <input type="text" name="image" id="new-image" />
+        <label for="image">Image: </label>
+
         <!-- <h4>New Artist</h4>
         <label for="name">Name: </label>
         <input type="text" name="name" id="new-name" />
