--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
     <h3 id=" detail-title">Artist</h3>
     </div>
 
-    <!-- <h3>Date:</h3> -->
-    <!-- <p>
+    <h3>Date:</h3> -->
+     <p>
         <span id='detail-date'>Inser</span> 
-    </p> -->
-    <!-- <h3>Likes:</h3>
+    </p>
+    <h3>Likes:</h3>
     <p id='detail-likes'>
 
-    </p> -->
+    </p>
 
     <!-- New Artist Form -->
     <form id="new-artist">
