--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <input type="text" name="image" id="new-image" />
         <label for="image">Image: </label>
 
-        <!-- <h4>New Artist</h4>
+        <h4>New Artist</h4>
         <label for="name">Name: </label>
         <input type="text" name="name" id="new-name" />
         <label for="title">Title: </label>
@@ -56,7 +56,7 @@
         <label for="date">Date: </label>
         <input type="number" name="date" id="new-date" />
         <label for="new-likes">Likes: </label>
-        <textarea name="new-likes" id="new-likes"></textarea> -->
+        <textarea name="new-likes" id="new-likes"></textarea>
         <input type="submit" value="Paint" />
     </form>
 
