--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <h3 id=" detail-title">Artist</h3>
     </div>
 
-    <h3>Date:</h3> -->
+    <h3>Date:</h3>
      <p>
         <span id='detail-date'>Inser</span> 
     </p>
