--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
     <!-- Artist Details -->
     <div id="artist-detail">
         <img id="detail-image" src="" alt="Insert Image Here" />
-        <h2 id="detail-name"">Artist</h2>
+        <h2 id="detail-name">Artist</h2>
     <h3 id=" detail-title">Artist</h3>
     </div>
 
     <h3>Date:</h3>
      <p>
-        <span id='detail-date'>Inser</span> 
+        <span id='detail-date'>Insert</span> 
     </p>
     <h3>Likes:</h3>
     <p id='detail-likes'>
