--- a/index.html
+++ b/index.html
@@ -19,34 +19,32 @@
     </header>
 
     <!-- Artist Menu -->
-    <div id="artist-menu">
+    <div id="Artist-guild">
         <!-- Artist Images Here -->
     </div>
 
 
     <!-- Artist Details -->
-    <div id="artist-detail">
-        <img id="detail-image" src="" alt="Insert Image Here" />
-        <h2 id="detail-name">Artist</h2>
-    <h3 id=" detail-title">Artist</h3>
+    <div id="Artist-detail">
+        <img class="detail-image" src="" alt="Insert Image Here" />
+        <h2 class="detail-name">Artist</h2>
+    <h3 class=" detail-date">Artist</h3>
     </div>
 
-    <h3>Date:</h3>
+    <h3>Title:</h3>
      <p>
-        <span id='detail-date'>Insert</span> 
+        <span id='detail-title'>Insert</span> 
     </p>
-    <h3>Likes:</h3>
-    <p id='detail-likes'>
-
+    <h3>Object Name:</h3>
+    <p id='detail-object-name'>
+    New Object Name
     </p>
 
     <!-- New Artist Form -->
     <form id="new-artist">
-
+        <h4>New Artist</h4>
         <input type="text" name="image" id="new-image" />
         <label for="image">Image: </label>
-
-        <h4>New Artist</h4>
         <label for="name">Name: </label>
         <input type="text" name="name" id="new-name" />
         <label for="title">Title: </label>
@@ -55,8 +53,8 @@
         <input type="text" name="image" id="new-image" />
         <label for="date">Date: </label>
         <input type="number" name="date" id="new-date" />
-        <label for="new-likes">Likes: </label>
-        <textarea name="new-likes" id="new-likes"></textarea>
+        <label for="new-object-name">Object Name: </label>
+        <textarea name="new-object-name" id="new-object-name"></textarea>
         <input type="submit" value="Paint" />
     </form>
 
